@@ -7,12 +7,12 @@ require ("../lib")
 				.argument ("arg2")
 				.option ({ short: "a", long: "aaaa" })
 				.option ({ long: "b", negate: true })
-				.option ({ short: "c", argument: "C" })
-				.option ({ long: "d", argument: "D", default: "dddd" })
-				.option ({ short: "e", argument: "E", optional: true })
-				.option ({ long: "f", argument: "F", default: "ffff",
+				.option ({ short: "c", metavar: "C" })
+				.option ({ long: "d", metavar: "D", default: "dddd" })
+				.option ({ short: "e", metavar: "E", optional: true })
+				.option ({ long: "f", metavar: "F", default: "ffff",
 						optional: true })
-				.option ({ short: "g", argument: "G", aliases: ["foo", "bar"]})
+				.option ({ short: "g", metavar: "G", aliases: ["foo", "bar"]})
 				.help ()
 				.usage ()
 				.version ("v1.2.3")
