@@ -715,7 +715,7 @@ Argp.prototype._createHelp = function (){
 						});
 					}
 					if (!o.flag){
-						line += (o.optional ? "[=" + o.argument + "]" : "=" + o.argument);
+						line += (o.optional ? "[=" + o.metavar + "]" : "=" + o.metavar);
 					}
 				}else{
 					line += "-" + o.short;
@@ -728,8 +728,8 @@ Argp.prototype._createHelp = function (){
 					}
 					if (!o.flag){
 						line += (o.optional
-								? "[" + alias + o.argument + "]"
-								: (alias || " ") + o.argument);
+								? "[" + alias + o.metavar + "]"
+								: (alias || " ") + o.metavar);
 					}
 				}
 			}else if (o.long){
@@ -740,7 +740,7 @@ Argp.prototype._createHelp = function (){
 					});
 				}
 				if (!o.flag){
-					line += (o.optional ? "[=" + o.argument + "]" : "=" + o.argument);
+					line += (o.optional ? "[=" + o.metavar + "]" : "=" + o.metavar);
 				}
 			}
 		}
@@ -791,7 +791,7 @@ Argp.prototype._createUsage = function (){
 		
 		shortArgs.forEach (function (o){
 			usage += " [-" + o.short +
-					(o.optional ? "[" + o.argument + "]" : " " + o.argument) + "]";
+					(o.optional ? "[" + o.metavar + "]" : " " + o.metavar) + "]";
 		});
 		
 		//Long names
@@ -823,7 +823,7 @@ Argp.prototype._createUsage = function (){
 			
 			usage += (o.flag
 					? "]"
-					: (o.optional ? "[=" + o.argument + "]" : "=" + o.argument) + "]");
+					: (o.optional ? "[=" + o.metavar + "]" : "=" + o.metavar) + "]");
 		}
 		
 		//Arguments
@@ -874,7 +874,7 @@ Argp.prototype._argument = function (name, o){
 };
 
 Argp.prototype._option = function (o){
-	o.flag = !o.argument;
+	o.flag = !o.metavar;
 	o.id = o.long || o.short;
 	o.description = o.description || null;
 	o.hidden = !!o.hidden;
