@@ -1,5 +1,6 @@
 v0.0.15 (27 Sep 2013)
 	Renamed "help" to "synopsis", property of "argument()".
+	Renamed "argument" to "metavar", property of "option()".
 	Minor improvements.
 
 v0.0.14 (26 Sep 2013)
